clusters/on-prem-cluster/apps/osticket/osticket/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osticket
  namespace: osticket
  labels:
    app: osticket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osticket
  template:
    metadata:
      labels:
        app: osticket
    spec:
      containers:
      - name: osticket
        image: tiredofit/osticket
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
